# Envelope

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  PLAN.md  README.md  package.json  pitch-deck-20260511-115418.html  pnpm-lock.yaml  submission-20260511.html
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/components/flows/: new-contractor.tsx  new-invoice.tsx  onboarding.tsx  org-gate.tsx
apps/web/components/landing/: cta-section.tsx  developers-section.tsx  features-section.tsx  footer-section.tsx  hero-section.tsx  how-it-works-section.tsx  infrastructure-section.tsx  integrations-section.tsx  metrics-section.tsx  navigation.tsx  pricing-section.tsx  security-section.tsx  testimonials-section.tsx
apps/web/components/providers/: SolanaProvider.tsx
apps/web/components/ui/: button.tsx  empty-state.tsx  header.tsx  monogram.tsx  primitives.tsx  wallet-button.tsx
apps/web/lib/: auth.ts  config.ts
apps/web/lib/api/: fetcher.ts
apps/web/lib/cloak/: client.ts
apps/web/lib/dodo/: client.ts
apps/web/lib/encrypt/: client.ts
apps/web/lib/hooks/: useOrg.ts
apps/web/lib/ika/: client.ts
apps/web/lib/kirapay/: client.ts
apps/web/lib/payroll/: orchestrator.ts  seed.ts
apps/web/lib/policy/: client.ts  idl.json
docs/: architecture.md  sponsor-integration-checklist.md
programs/envelope-policy/: Cargo.toml
programs/envelope-policy/src/: lib.rs
scripts/: cloak-spike.ts  seed-comp-csv.ts  sns-bootstrap.ts
(+30 files in other folders)
