[package]
name = "envelope-policy"
version = "0.1.0"
edition = "2021"
description = "Envelope policy program — controls an Ika dWallet for org treasury, gates payroll batch signing"

[lib]
crate-type = ["cdylib", "lib"]
name = "envelope_policy"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
